WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131819
AX: grid rows are not recognized due to lack of explicit role="row", role="gridcell"
https://bugs.webkit.org/show_bug.cgi?id=131819
Summary
AX: grid rows are not recognized due to lack of explicit role="row", role="gr...
James Craig
Reported
2014-04-17 14:33:14 PDT
Created
attachment 229579
[details]
test case AX: grid rows are not recognized do to lack of explicit role="row", role="gridcell" See attached test case. The <tr> and <td> elements don't have another role defined, so they should be fine using the implicit "row" and "gridcell" role. More info about implicit semantics in these portions of the spec.
http://www.w3.org/WAI/PF/aria/complete#implicit_semantics
http://www.w3.org/WAI/PF/aria/complete#mustContain
http://www.w3.org/WAI/PF/aria/complete#presentation
Attachments
test case
(3.27 KB, text/html)
2014-04-17 14:33 PDT
,
James Craig
no flags
Details
patch
(4.14 KB, patch)
2014-04-17 17:59 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-04-17 14:34:19 PDT
<
rdar://problem/16651324
>
chris fleizach
Comment 2
2014-04-17 17:59:27 PDT
Created
attachment 229604
[details]
patch
WebKit Commit Bot
Comment 3
2014-04-17 18:00:45 PDT
Attachment 229604
[details]
did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityARIAGrid.cpp:57: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 4
2014-04-17 18:07:24 PDT
(In reply to
comment #3
)
>
Attachment 229604
[details]
did not pass style-queue: > > > ERROR: Source/WebCore/accessibility/AccessibilityARIAGrid.cpp:57: Multi line control clauses should use braces. [whitespace/braces] [4] > Total errors found: 1 in 5 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
False positive
https://bugs.webkit.org/show_bug.cgi?id=131835
chris fleizach
Comment 5
2014-04-19 18:39:39 PDT
http://trac.webkit.org/changeset/167559
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug