AX: grid rows are not recognized do to lack of explicit role="row", role="gridcell" https://bugs.webkit.org/show_bug.cgi?id=131819

Reviewed by Darin Adler.

Source/WebCore:
Test: accessibility/table-with-missing-aria-role-rows.html

If a table is using role="grid", and it has <tr> elements that do not have
role="row", we should still treat them as row elements.

* accessibility/AccessibilityARIAGrid.cpp:
(WebCore::AccessibilityARIAGrid::addTableCellChild):

LayoutTests:
* accessibility/table-with-missing-aria-role-rows-expected.txt: Added.
* accessibility/table-with-missing-aria-role-rows.html: Added.



Canonical link: https://commits.webkit.org/149979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167559 268f45cc-cd09-0410-ab3c-d52691b4dbfc